# rope-learn

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.ipynb
cmake/: utils.cmake
csrc/: ops.h  pybind.cpp  rope.cu  torch_utils.h
rope/: ops.py
